--- a/view.html
+++ b/view.html
@@ -10,10 +10,8 @@
   <link href="https://vjs.zencdn.net/7.18.1/video-js.css" rel="stylesheet" />
 </head>
 <body>
-  <video-js id="myPlayer" controls preload="auto" class="video-js" data-setup='{}'>
-    <source src="{VIDEO_URL}" type="application/x-mpegURL">
-  </video-js>
-  <h1>{TITLE}</h1>
+
+  {videos}
 
   <!-- Video JS -->
   <script src="https://vjs.zencdn.net/7.18.1/video.min.js"></script>
